# Hatchling

./: .commitlintrc.json  .gitignore  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION  docs-requirements.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  run_tests.py  test_phase2_i18n.py
LLM_Reports/: Architecture_Analysis_Report.md  GitHub_Specific_Solutions_Report.md  Industry_Best_Practices_Report.md  Integrated_Automated_Versioning_Strategy.md  Semantic_Release_Migration_Plan.md  Semantic_Release_Migration_Plan_v2.md  Workflow_Optimization_Report.md
docker/: .env  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: CHANGELOG.md  _config.yml  index.md  table_of_contents.md  versioning.md
hatchling/: __init__.py  app.py
scripts/: prepare_version.py  tag_cleanup.py  version_manager.py
tests/: dev_test_app_settings_singleton.py  dev_test_enhanced_tool_execution.py  dev_test_llmprovider_base.py  dev_test_mcp_manager_events.py  dev_test_persistent_settings.py  dev_test_phase1_settings.py  dev_test_phase2_i18n.py  dev_test_provider_implementations.py  dev_test_provider_registry.py  dev_test_stream_events.py  dev_test_tool_lifecycle.py  feature_test_event_system.py  feature_test_llm_provider_base.py  feature_test_mcp_tool_call_subscriber.py  feature_test_ollama_streaming.py  feature_test_openai_streaming.py  feature_test_provider_registry.py  feature_test_tool_call_parse_strategies.py  feature_test_tool_chaining.py  integration_test_command_system.py  integration_test_ollama.py  test_data_utils.py  (+15 more)
(+142 files in other folders)
