[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hatchling"
version = "0.4.2"
description = "LLM with MCP Tool Calling"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Hatch! Team"}
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "asyncio>=3.4.3",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.1",
    "websockets>=12.0",
    "httpx>=0.25.2",
    "anyio>=3.7.1",
    "prompt_toolkit>=3.0.41",
    "tomli-w==1.2.0",
    "tomli==2.2.1",
    "PyYAML>=6.0",
    "tqdm>=4.0.0",

    "mcp>=1.6.0",
    
    "ollama==0.5.1",
    "openai==1.97.0",

    "hatch @ git+https://github.com/CrackingShells/Hatch.git@v0.5.1"
]

[project.scripts]
hatchling = "hatchling.app:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hatchling = ["config/languages/*.toml"]



[project.urls]
"Repository" = "https://github.com/CrackingShells/Hatchling"